<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:id="@+id/box_one_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/box_one"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginBottom="32dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto"
            android:textSize="@dimen/box_text_size"
            android:textAlignment="center"
            style="@style/WhiteBox"
            android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:id="@+id/box_two_text"
            android:text="@string/box_two"
            android:layout_width="130dp"
            android:layout_height="130dp"
            style="@style/WhiteBox"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/box_one_text"
    />
    <TextView
            android:id="@+id/box_three_text"
            android:text="@string/box_three"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/WhiteBox"
            android:layout_marginTop="0dp"
            app:layout_constraintTop_toTopOf="@+id/box_two_text"
            app:layout_constraintBottom_toTopOf="@+id/box_four_text"
            app:layout_constraintStart_toEndOf="@+id/box_two_text" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>
    <TextView
            android:id="@+id/box_four_text"
            android:text="@string/box_four"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/box_three_text"
            app:layout_constraintBottom_toTopOf="@+id/box_five_text"
            style="@style/WhiteBox"
            app:layout_constraintStart_toEndOf="@+id/box_two_text" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
    />
    <TextView
            android:id="@+id/box_five_text"
            android:text="@string/box_five"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/box_four_text"
            app:layout_constraintBottom_toBottomOf="@+id/box_two_text"
            android:layout_marginBottom="0dp"
            style="@style/WhiteBox"
            app:layout_constraintStart_toEndOf="@+id/box_two_text" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"/>
    <Button
            android:text="@string/red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/red_button"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/how_to_play_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/yellow_button"
            android:layout_marginStart="16dp" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="1.0"
    />
    <Button
            android:text="@string/yellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/yellow_button"
            app:layout_constraintBaseline_toBaselineOf="@+id/red_button"
            app:layout_constraintStart_toEndOf="@+id/red_button" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/green_button"/>
    <Button
            android:text="@string/green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/green_button"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintBaseline_toBaselineOf="@+id/yellow_button"
            app:layout_constraintStart_toEndOf="@+id/yellow_button" app:layout_constraintHorizontal_bias="0.5"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/how_to_play_text" android:text="@string/how_to_play"
            android:fontFamily="@font/roboto" android:textSize="24sp" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/box_two_text"/>
    <TextView
            android:text="@string/tab_the_screen_and_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tab_the_screen_and_buttons_text" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toEndOf="@+id/how_to_play_text"
            android:layout_marginStart="16dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/how_to_play_text"/>

</android.support.constraint.ConstraintLayout>